resolve issue where text dissapeared on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ body {
     text-align: center;
     max-width: 300px;
 	max-height: 280px;
-	margin-bottom: 15px;
+	margin: 15px;
 	display: block;
 	
 
@@ -76,11 +76,12 @@ body {
 
 .sponsorlogo img {
 	height: 200px;
-	object-fit: contain;
+	max-width: 300px;
+	object-fit: scale-down;
 	padding-left: 20px;
 	padding-right: 20px;
 	padding-top: 50px;
-	margin: auto;
+	margin-bottom: 10px;
 	border-top-left-radius: 30px;
 	border-top-right-radius: 30px;
 	border-bottom-left-radius: 0px;
@@ -100,10 +101,9 @@ body {
 }
 
 .sponsorlogo h1 {
-	width: 290px;
+	width: 300px;
 	height: 200px;
 	padding-top: 35%;
-	margin-bottom: 15px;
 	text-align: center;
 	vertical-align: middle;
 }
